src/test/ui/borrowck/borrowck-overloaded-index-move-from-vec.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-overloaded-index-move-from-vec.rs:20:15
   |
LL |     let bad = v[0];
   |               ^^^^
   |               |
   |               cannot move out of borrowed content
   |               help: consider borrowing here: `&v[0]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
